# advent-of-code-2023

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
advent_of_code/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
advent_of_code/lib/: file.py
tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
